codama-macros/tests/codama_attribute/type_nodes/number_type_node/format_already_set.fail.rs
use codama_macros::codama;

#[codama(type = number(u32, u64))]
pub struct Test;

#[codama(type = number(format = u32, format = u64))]
pub struct TestExplicit;

fn main() {}
